objects/ASI_HK_CRM_Sales_Order_History_Detail__c.object
<CustomObject>
    <description>ASI HK CRM - Sales Order History Details</description>
    <fields>
        <fullName>ASI_CRM_AG_Code__c</fullName>
        <label>AG Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Converted_Qty_9L__c</fullName>
        <formula>ASI_HK_CRM_Quantity_in_Bottles__c * ASI_HK_CRM_Product_SKU__r.ASI_HK_CRM_Std_Bottle_Size__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Qty (9L)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Duty_Cost__c</fullName>
        <label>Duty Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOB_Cost__c</fullName>
        <label>FOB Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Handling_Cost__c</fullName>
        <label>Handling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <formula>ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_Brand_Event_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Brand Event Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_Product_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Product Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Request</label>
        <referenceTo>ASI_KOR_Sales_Order_Request__c</referenceTo>
        <relationshipLabel>Sales Order History Details</relationshipLabel>
        <relationshipName>Sales_Order_History_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount_Number__c</fullName>
        <formula>ASI_HK_CRM_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_FI_Amount__c</fullName>
        <label>Total FI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Actual_Discount__c</fullName>
        <label>Actual Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Base_Price_Bottle__c</fullName>
        <label>Base Price (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Converted_Qty_9L__c</fullName>
        <label>Converted Qty (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Item_Group_Code__c</fullName>
        <label>Item Group Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_KPI_Point_Value__c</fullName>
        <label>KPI Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Sales Order History Details</relationshipLabel>
        <relationshipName>ASI_HK_CRM_Sales_Order_History_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Quantity_in_Bottles__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Quantity_in_Cases__c</fullName>
        <label>Quantity (in Cases)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_INFO_SOHD_SFID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_SOHD_SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sales_Order_History__c</fullName>
        <label>Sales Order History</label>
        <referenceTo>ASI_HK_CRM_Sales_Order_History__c</referenceTo>
        <relationshipName>ASI_HK_CRM_Sales_Order_History_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Total_Amount__c</fullName>
        <inlineHelpText>Include VAT</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Total_Supply_Amount__c</fullName>
        <inlineHelpText>Exclude VAT</inlineHelpText>
        <label>Total Supply Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_HK_CRM_Product_SKU__r.ASI_TH_CRM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Subbrand_Name__c</fullName>
        <formula>ASI_HK_CRM_Product_SKU__r.ASI_MFM_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Name</label>
        <type>Text</type>
    </fields>
    <label>Sales Order History Detail</label>
    <nameField>
        <displayFormat>SOHD-{00000}</displayFormat>
        <label>Sales Order History Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order History Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <label>JP CRM Sales Order History Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <label>MY Sales Order History Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <label>SG CRM Sales Order History Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Sales Order History Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <label>HK CRM Sales Order History Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Sales_Order_History_Detail</fullName>
        <active>true</active>
        <label>TH CRM Sales Order History Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>